# GPC_F

./: ATOI.F90  CFLCLOS.F90  CFLINQR.F90  CFLIRET.F90  CFLROPN.F90  CFLTRLN.F90  CGRCENTROID.F90  CMakeLists.txt  C_fopen.c  FCLOSE.F90  GNUmakefile  GPC_FConfig.cmake.in  GZPUTR.FOR  MODULE_GEMPRM_FUNC.F90  MODULE_MSVCRT.f90  MODULE_gemprm.f90  MODULE_gpc.f90  README.md  Testgpc.f90  britain.dbf  britain.shp  cfl_clos.f  cgr_centroid.c  cgrcentroid.c  depend.mk  flbksp.f  flflun.f  flglun.f  flsopn.f  fltbop.f  fltdat.f  gemprm.f  gpc-233.c  gpc_2_33.c  gpc_cvlist.c  gpc_f.f  gpc_f.f90  gpc_gvarea.c  gpc_gvlist.c  gpc_polygon_clip_f.f  (+25 more)
Test/: CMakeLists.txt  GNUmakefile  arrows.shp  arrows.shx  britain.shx  rectangle.shp  rectangle.shx  square_left.shx  square_right.shp  square_right.shx  test_GPC.f  test_GPC_F.f90  tests.json
